--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,13 @@ env:
     - MAVEN_OPTS="-Djna.library.path=${TRAVIS_BUILD_DIR}/travis -DskipTests=false -DfailIfNoTests=false"
 
 before_install:
+  - ifconfig -a
   - cp ${TRAVIS_BUILD_DIR}/travis/settings.xml ${HOME}/.m2
+  - wget http://thredds.ucar.edu/thredds/catalog.xml
+  - cat catalog.xml
+  - wget http://thredds-test.unidata.ucar.edu/thredds/catalog.xml
+  - wget http://thredds-dev.unidata.ucar.edu/thredds/catalog.xml
+  - traceroute atm.ucar.edu
   - wget http://atm.ucar.edu/thredds/catalog.xml
   - cat catalog.xml
 
