--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - MAVEN_OPTS="-Djna.library.path=${TRAVIS_BUILD_DIR}/travis -DskipTests=false -DfailIfNoTests=false"
 
 before_install:
+  - echo GET / | nc -vvv thredds.ucar.edu 80
   - curl -v http://thredds-test.unidata.ucar.edu/thredds/catalog.xml
   - curl -v http://thredds-dev.unidata.ucar.edu/thredds/catalog.xml
   - curl -v http://comet.ucar.edu
