--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ env:
 
 before_install:
         #- curl -v http://thredds-test.unidata.ucar.edu/thredds/catalog.xml
-  - curl -v http://thredds-dev.unidata.ucar.edu/thredds/catalog.xml
+  - curl --trace-ascii - http://thredds-dev.unidata.ucar.edu/thredds/catalog.xml
     #- curl -v http://comet.ucar.edu
     #- curl -v http://unidata2-new.ssec.wisc.edu/thredds/catalog.xml
-  - curl --trace --no-keepalive http://atm.ucar.edu
+  - curl --trace-ascii - --no-keepalive http://atm.ucar.edu
   - curl -v http://threddsRC.ucar.edu
   - curl -v http://threddsBackup.ucar.edu
     #- curl -v https://thredds.ucar.edu
